# extreme-parkour

./: .gitignore  README.md
deploy_cpp/: CMakeLists.txt  README.md  package.xml
deploy_cpp/config/robots/: mybot_v3_parkour.yaml
deploy_cpp/include/: height_subscriber.h  imu_subscriber.h  keyboard_controller.h  parkour_policy_runner.h  robot_config.h  robot_runtime_config.h  state_machine.h
deploy_cpp/launch/: deploy.launch.py  sim.launch.py
deploy_cpp/policy/: actor_backbone.jit  heightmap_encoder.jit  history_encoder.jit
deploy_cpp/robot/mybot/urdf/: mybot.urdf
deploy_cpp/robot/mybot/xml/: mybot.xml
deploy_cpp/robot/mybot_v2/meshes/: FL_calf.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_hip.STL  FR_thigh.STL  RL_calf.STL  RL_hip.STL  RL_thigh.STL  RR_calf.STL  RR_hip.STL  RR_thigh.STL  body.STL
deploy_cpp/robot/mybot_v2/xml/: mybot_v2.xml  mybot_v2_for_isaacgym.xml  mybot_v2_for_mujoco.xml
deploy_cpp/robot/mybot_v2_1/urdf/: mybot_v2_1.urdf
deploy_cpp/robot/mybot_v3/urdf/: mybot_v3.urdf
deploy_cpp/robot/mybot_v3/xml/: mybot_v3.xml
deploy_cpp/scripts/: export_heightmap_jit.py
deploy_cpp/sim/: mujoco_sim_node.py
deploy_cpp/src/: deploy_node.cpp  height_subscriber.cpp  imu_subscriber.cpp  parkour_policy_runner.cpp  robot_runtime_config.cpp  state_machine.cpp
deploy_extreme_parkour/: README.md  __init__.py  config.py  notes.md  observation.py  policy.py  replay_csv.py  sim2sim_mujoco.py
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: legged_robot.py  legged_robot_config.py
legged_gym/legged_gym/envs/mybot_v3/: mybot_v3_config.py
legged_gym/legged_gym/scripts/: save_heightmap_jit.py  train.py
legged_gym/resources/robots/mybot_v3/urdf/: mybot_v3.urdf
legged_gym/resources/robots/mybot_v3/xml/: mybot_v3.xml
rsl_rl/rsl_rl/algorithms/: ppo.py
rsl_rl/rsl_rl/modules/: __init__.py  heightmap_backbone.py
rsl_rl/rsl_rl/runners/: on_policy_runner.py
